# cpp-test

./: CMakeLists.txt  CMakePresets.json
src/: MyCpp.cpp  MyMod.cppm
test/: MyTest.cpp
